# PACMAN

./: CMakeLists.txt  README.md
.circleci/: config.yml
src/: CMakeLists.txt  main.cpp
src/EntityFactory/: EntityFactory.cpp  EntityFactory.h
src/EntityView/: DynamicEntityView.cpp  DynamicEntityView.h  EntityView.cpp  EntityView.h  View.h
src/EntityView/Coin/: CoinView.cpp  CoinView.h
src/EntityView/Collectable/: CollectableView.h
src/EntityView/DynamicEntityView/: DynamicEntityView.cpp  DynamicEntityView.h
src/EntityView/DynamicEntityView/Ghost/: GhostView.cpp  GhostView.h
src/EntityView/DynamicEntityView/PacMan/: PacManView.cpp  PacManView.h
src/EntityView/Fruit/: FruitView.cpp  FruitView.h
src/EntityView/Ghost/: GhostView.cpp  GhostView.h
src/EntityView/PacMan/: PacManView.cpp  PacManView.h
src/EntityView/Wall/: WallView.cpp  WallView.h
src/Game/: Assets.cpp  Assets.h  Game.cpp  Game.h
src/Game/SoundManager/: SoundManager.cpp  SoundManager.h
src/Game/SpriteSheet/: SpriteSheet.cpp  SpriteSheet.h
src/Game/Spritesheet/: Spritesheet.cpp  Spritesheet.h
src/Game/Widgets/Button/: Button.cpp  Button.h
src/Game/Widgets/ButtonWidget/: ButtonWidget.cpp  ButtonWidget.h
src/Game/Widgets/TextWidget/: TextWidget.cpp  TextWidget.h
src/Logic/: CMakeLists.txt
src/Logic/AbstractFactory/: AbstractFactory.h
src/Logic/Coordinate/: Coordinate.cpp  Coordinate.h
src/Logic/Entity/: Entity.cpp  Entity.h
src/Logic/Entity/Collectable/: Collectable.h
src/Logic/Entity/DynamicEntity/: DynamicEntity.cpp  DynamicEntity.h
src/Logic/Entity/Ghost/: Ghost.cpp  Ghost.h
src/Logic/Entity/IEntityVisitor/: IEntityVisitor.h
src/Logic/Entity/PacMan/: PacMan.h
src/Logic/Entity/StaticEntity/: StaticEntity.cpp  StaticEntity.h
src/Logic/Entity/Wall/: Wall.h
src/Logic/Entity/World/: World.h
src/Logic/EntityFactory/: EntityFactory.h
src/Logic/Events/EntityEvent/: EntityCollectedEvent.h  EntityCreateEvent.h  EntityDestroyEvent.h  EntityDirectionChangeEvent.h  EntityPositionChangeEvent.h
src/Logic/Helper/Camera/: Camera.cpp  Camera.h
src/Logic/Helper/Randomizer/: Randomizer.cpp  Randomizer.h
src/Logic/Helper/TimeManager/: TimeManager.cpp  TimeManager.h
src/Logic/Observer/: Observer.h
src/Logic/Pattern/AbstractFactory/: AbstractFactory.h
src/Logic/Pattern/Singleton/: Singleton.h
src/Logic/Pattern/Visitor/: IVisitor.h
src/Logic/Score/: Score.cpp  Score.h
src/Logic/Score/Scoreboard/: Scoreboard.cpp  Scoreboard.h
src/Logic/Subject/: Subject.h
src/Logic/World/: World.cpp  World.h
src/Logic/World/Level/: Level.cpp  Level.h
src/Logic/lib/: json.hpp
src/PacManLogic/: CMakeLists.txt  PMLogic.h  main.cpp
src/PacManLogic/AbstractFactory/: AbstractFactory.h
src/PacManLogic/Camera/: Camera.cpp  Camera.h
src/PacManLogic/Coordinate/: Coordinate.cpp  Coordinate.h
src/PacManLogic/Entity/: Entity.cpp  Entity.h
src/PacManLogic/Entity/Collectable/: Collectable.cpp  Collectable.h
src/PacManLogic/Entity/DynamicEntity/: DynamicEntity.cpp  DynamicEntity.h
src/PacManLogic/Entity/Ghost/: Ghost.h
src/PacManLogic/Entity/IEntityVisitor/: IEntityVisitor.h
src/PacManLogic/Entity/PacMan/: PacMan.cpp  PacMan.h
src/PacManLogic/Entity/StaticEntity/: StaticEntity.cpp  StaticEntity.h
src/PacManLogic/Entity/Wall/: Wall.h
src/PacManLogic/Events/EntityEvent/: EntityCollectedEvent.cpp  EntityCollectedEvent.h  EntityCreateEvent.h  EntityDestroyEvent.h  EntityDirectionChangeEvent.h  EntityPositionChangeEvent.h
src/PacManLogic/Events/GhostEvent/: GhostModeChangeEvent.h
src/PacManLogic/Helper/Camera/: Camera.cpp  Camera.h
src/PacManLogic/Helper/DeltaTime/: DeltaTime.cpp  DeltaTime.h
src/PacManLogic/Helper/Random/: Random.cpp  Random.h
src/PacManLogic/Helper/StopWatch/: StopWatch.cpp  StopWatch.h
src/PacManLogic/Helper/TimeManager/: TimeManager.cpp  TimeManager.h
src/PacManLogic/IObserver/: IObserver.cpp  IObserver.h
src/PacManLogic/ISubject/: ISubject.cpp  ISubject.h
src/PacManLogic/IVisitor/: IVisitor.h
src/PacManLogic/Observer/: Observer.h
src/PacManLogic/Pattern/AbstractFactory/: AbstractFactory.h
src/PacManLogic/Pattern/Command/: ICommand.h
src/PacManLogic/Pattern/Singleton/: Singleton.h
src/PacManLogic/Pattern/Visitor/: IVisitor.h
src/PacManLogic/Score/: Score.cpp  Score.h
src/PacManLogic/Score/Scoreboard/: Scoreboard.cpp  Scoreboard.h
src/PacManLogic/Subject/: Subject.h
src/PacManLogic/World/: World.cpp  World.h
src/PacManLogic/World/EntityOnCollisionCommand/: EntityOnCollisionCommand.cpp  EntityOnCollisionCommand.h
src/PacManLogic/World/Level/: Level.cpp  Level.h
src/PacManLogic/World/OnCollisionCommand/: OnCollisionCommand.cpp  OnCollisionCommand.h
src/PacManLogic/World/UpdateVisitor/: UpdateVisitor.cpp  UpdateVisitor.h
src/Representation/EntityView/: EntityView.cpp  EntityView.h
src/Representation/EntityView/Collectable/: CollectableView.cpp  CollectableView.h
src/Representation/EntityView/Ghost/: GhostView.h
src/Representation/EntityView/PacMan/: PacManView.h
src/Representation/EntityView/Wall/: WallView.cpp  WallView.h
src/Representation/EntityViewFactory/: EntityViewFactory.cpp  EntityViewFactory.h
src/State/: State.cpp  State.h
src/State/GameOverState/: GameOverState.cpp  GameOverState.h
src/State/LevelState/: LevelState.cpp  LevelState.h
src/State/MenuState/: MenuState.cpp  MenuState.h
src/State/PausedState/: PausedState.cpp  PausedState.h
src/State/StateManager/: StateManager.cpp  StateManager.h
src/UnitTests/: test_main.cpp  test_observerpattern.cpp
src/View/EntityView/: EntityView.cpp  EntityView.h
src/View/EntityView/Coin/: CoinView.cpp  CoinView.h
src/View/EntityView/DynamicEntityView/: DynamicEntityView.cpp  DynamicEntityView.h
src/View/EntityView/Fruit/: FruitView.cpp  FruitView.h
src/View/SoundManager/: SoundManager.cpp  SoundManager.h
src/View/SpriteSheet/: SpriteSheet.cpp  SpriteSheet.h
src/View/State/: State.cpp  State.h
src/View/StateManager/: StateManager.cpp  StateManager.h
src/config/: highScore.json  level.txt
src/json/: highScore.json
(+75 files in other folders)
