CMAKE_MINIMUM_REQUIRED(VERSION 3.22.1)
PROJECT(PacMan)
SET(CMAKE_CXX_FLAGS "-Wall -Werror")
SET(CMAKE_CXX_STANDARD 20)
ADD_SUBDIRECTORY(src)
INSTALL(TARGETS PacMan DESTINATION bin)
IF (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
    SET (CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/installed" CACHE PATH "default install path" FORCE)
ENDIF()
